Using template extensions

--- a/template_html/base.html
+++ b/template_html/base.html
@@ -59,7 +59,7 @@
                 <h2>Welcome to {{title}}</h2>
 
                 <div class="home-main">
-                    <p>{{contents}}</p>
+{% block contents %}{% endblock %}
                 </div>
 
             </div>
