--- a/template_html/datatable.html
+++ b/template_html/datatable.html
@@ -1,6 +1,26 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-<h2>HERE A TABLE</h2>
-<p>{{ contents }}</p>
+
+<table id="data_table" class="display">
+<thead>
+<tr>
+{% for column in datatable["columns"] %}
+  <th> {{ column }} </th>
+{% endfor %}
+</thead>
+
+{% for row in datatable["rows"] %}
+  <tr>
+  {% for cell in row %}
+    {% if cell["url"] %}
+        <td><a href="{{ cell["url"]}}">{{ cell["value"] }}</a></td>
+    {% else %}
+        <td>{{ cell["value"] }}</td>
+    {% endif %}
+  {% endfor %}
+</tr>
+{% endfor %}
+</table>
+
 {% endblock %}
