--- a/template_html/datatable.html
+++ b/template_html/datatable.html
@@ -6,7 +6,7 @@
 <thead>
 <tr>
 {% for column in datatable["columns"] %}
-  <th> {{ column }} </th>
+  <th> {{ column["name"] }} </th>
 {% endfor %}
 </thead>
 
