First test at interface

--- a/template_html/sql.html
+++ b/template_html/sql.html
@@ -14,6 +14,24 @@ experimentation and exploration by advanced users familiar with SQL.</p>
 C to Javascript compiler by kripken (<a href='https://github.com/kripken/emscripten'>emscripten</a>).
 Project now maintained by <a href='https://github.com/lovasoa'>lovasoa</a>.</p>
 
+<main>
+  <label for='commands'>Enter some SQL</label>
+  <br>
+
+  <textarea id="commands">
+
+SELECT designation,COUNT(*) AS nbr, (AVG(salary)) AS avg_salary FROM employees GROUP BY designation ORDER BY avg_salary DESC;
+SELECT name,hired_on FROM employees ORDER BY hired_on;</textarea>
+
+  <button id="execute" class="button">Execute</button>
+  <button id='savedb' class="button">Save the db</button>
+  <label class="button">Load an SQLite database file: <input type='file' id='dbfile'></label>
+
+  <div id="error" class="error"></div>
+
+  <pre id="output">Results will be displayed here</pre>
+</main>
+
 {% endblock %}
 
 {% block sql_js %}
@@ -24,7 +42,6 @@ Project now maintained by <a href='https://github.com/lovasoa'>lovasoa</a>.</p>
 {% for table in data %}
   execute("DROP TABLE IF EXISTS {{ table }};");
   execute("CREATE TABLE employees({{ schemata[table] }};");
-
 
   {% for row in data[table] %}
   execute("INSERT INTO {{ table }} VALUES ({{ row }})");
