Fix missing parenthesis

--- a/template_html/sql.html
+++ b/template_html/sql.html
@@ -41,7 +41,7 @@ SELECT name,hired_on FROM employees ORDER BY hired_on;</textarea>
 
 {% for table in data %}
   execute("DROP TABLE IF EXISTS {{ table }};");
-  execute("CREATE TABLE employees({{ schemata[table] }};");
+  execute("CREATE TABLE employees({{ schemata[table] }});");
 
   {% for row in data[table] %}
   execute("INSERT INTO {{ table }} VALUES ({{ row }})");
