Style SQL output table

--- a/template_html/sql.html
+++ b/template_html/sql.html
@@ -15,7 +15,7 @@ C to Javascript compiler by kripken (<a href='https://github.com/kripken/emscrip
 Project now maintained by <a href='https://github.com/lovasoa'>lovasoa</a>.</p>
 
 <main>
-  <label for='commands'>Enter some SQL</label>
+  <label for='commands'>Enter your SQL commands in the text bow below.</label>
   <br>
 
   <textarea id="commands">
@@ -23,8 +23,7 @@ SELECT * FROM languages;
 </textarea>
 
   <button id="execute" class="button">Execute</button>
-  <button id='savedb' class="button">Save the db</button>
-  <label class="button">Load an SQLite database file: <input type='file' id='dbfile'></label>
+  <button id='savedb' class="button">Download SQLite-db</button>
 
   <div id="error" class="error"></div>
 
