--- a/template_html/sql.html
+++ b/template_html/sql.html
@@ -10,9 +10,8 @@
 loaded in memory and can take a while to load. It is intended for
 experimentation and exploration by advanced users familiar with SQL.</p>
 
-<p>The `sqljs` library is original work by kripken (<a href='https://github.com/kripken/sql.js'>sql.js</a>).
-C to Javascript compiler by kripken (<a href='https://github.com/kripken/emscripten'>emscripten</a>).
-Project now maintained by <a href='https://github.com/lovasoa'>lovasoa</a>.</p>
+<p>The `sqljs` library is original work by kripken (<a href='https://github.com/kripken/sql.js'>sql.js</a>),
+now maintained by <a href='https://github.com/lovasoa'>lovasoa</a>.</p>
 
 <main>
   <label for='commands'>Enter your SQL commands in the text bow below.</label>
