--- a/template_html/base.html
+++ b/template_html/base.html
@@ -26,7 +26,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-danger">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a href="index.html" class="navbar-brand">{{title }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="mainnavbar">
                                            <span class="navbar-toggler-icon"></span>
